statum-macros/tests/ui/invalid_machine_private_field_access.stderr
error[E0616]: field `secret` of struct `demo::LightSwitch` is private
  --> tests/ui/invalid_machine_private_field_access.rs:30:19
   |
30 |     let _ = light.secret;
   |                   ^^^^^^ private field
